added other hands